k8s/productivity/boardripper/service.yml
apiVersion: v1
kind: Service
metadata:
  name: boardripper
  namespace: productivity
spec:
  selector:
    app: boardripper
  ports:
    - name: http
      port: 8080
      targetPort: http
